fixed gap at bottom and included a section to display the hand stage

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -39,6 +39,17 @@ page-home {
         font-size: 35px;
     }
 
+    #handStage {
+        height: 22px;
+        text-align: center;
+    }
+
+    #handStageText {
+        margin-top: 2px;
+        padding-bottom: 8px;
+        font-size: 20px;
+    }
+
     #cancel {
         background-color: #ff6666;
     }
